[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cargoeffe-mcp"
version = "0.2.0"
description = "MCP server for CargoEffe — AI-powered cargo loading plan design"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "dollob studio"},
]
keywords = ["mcp", "cargo", "loading", "logistics", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
cargoeffe-mcp = "cargoeffe_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cargoeffe_mcp"]
